cmake_minimum_required(VERSION 3.21)
project(curso)

set(CMAKE_CXX_STANDARD 14)

add_executable(curso main.cpp vars.cpp inputs.cpp condicoes.cpp ponteiros.cpp loops.cpp teste.cpp vetores.cpp cpf.cpp alloc.cpp fatorial.cpp structs.cpp enums.cpp files.cpp writefile.cpp env.cpp x.cpp statics.cpp project/main.cpp project/project.cpp project/project.hpp)
